elements/pfe-band/src/pfe-band.scss
@import "../../pfe-sass/pfe-sass";

$LOCAL: band;

%flex-fallback {
    display: flex;
    flex-flow: column nowrap;
    align-items: flex-start;
}

// %grid-layout {
//   display: grid;
//   grid-row-gap: #{pfe-local(gutter--vertical)};
//   grid-column-gap: #{pfe-local(gutter--horizontal)};
//   margin-bottom: 0;
// }

:host {
  display: block;

  // Default spacing values
  --pfe-band--Padding--vertical:               calc( #{pfe-var(container-spacer)} * 4);
  --pfe-band--Padding--horizontal:             calc( #{pfe-var(container-spacer)} * 1);
  // Bring them together for ease of use below
  --pfe-band--Padding:                         #{pfe-local(Padding--vertical)}  #{pfe-local(Padding--horizontal)};

  // Surface colors
  --pfe-band--BackgroundColor:                 #{pfe-color(surface--base)};
  --pfe-band--BackgroundPosition:              center center;

  // Border settings
  --pfe-band--Border:                          #{pfe-var(surface--border-width)} #{pfe-var(surface--border-style)} transparent;

  // Layouts, grid layouts
  --pfe-band--layout:                           1fr;
  --pfe-band__header--layout:                   1fr;
  --pfe-band__body--layout:                     1fr;
  --pfe-band__footer--layout:                   1fr;
  --pfe-band__aside--layout:                    1fr;

  // Vertical spacing
  --pfe-band--gutter--vertical:                 #{pfe-var(container-spacer)};
  --pfe-band--gutter--horizontal:               calc(#{pfe-var(container-spacer)} * 3);

  // Text colors
  --pfe-broadcasted--color--text:              #{pfe-color(surface--base--text)};
  --pfe-broadcasted--color--ui-link:           #{pfe-color(surface--base--link)};
  --pfe-broadcasted--color--ui-link--visited:  #{pfe-color(surface--base--link--visited)};
  --pfe-broadcasted--color--ui-link--hover:    #{pfe-color(surface--base--link--hover)};
  --pfe-broadcasted--color--ui-link--focus:    #{pfe-color(surface--base--link--focus)};

  // Band width logic
  // Initialize at mobile breakpoint
  --pfe-band--Width: auto;
  --pfe-band--Width__aside--sm: 240px;
  --pfe-band--Width__aside--lg: 300px;

  // Loop through the other breakpoints
  @each $size in (md, lg, xl) {
    @media screen and (min-width: pfe-breakpoint(#{$size})) {
      --pfe-band--Width: calc( #{pfe-breakpoint(#{$size})} - calc(#{pfe-local(Padding--horizontal)} * 4) );
    }
  }
  // Reduce padding for print
  @media print {
    --pfe-band--Padding: calc(#{pfe-local(Padding--vertical)} / 2) #{pfe-local(Padding--horizontal)};
  }

  // Wrapper sets padding and background visuals
  position: relative;
  //Flex commented out/////////////
  // @extend %flex-fallback;

  // Padding
  padding: calc(#{pfe-local(Padding--vertical)} / 2)  #{pfe-local(Padding--horizontal)};

  @media (min-width: #{pfe-breakpoint(sm)}) {
    padding: #{pfe-local(Padding)};
  }

  // Border styles
  border: #{pfe-local(Border)};

  // Base colors
  background-color:      #{pfe-local(BackgroundColor)};
  background-position:   #{pfe-local(BackgroundPosition)};
  color:                 #{pfe-radio(color, text)};

  // Remove background color for print
  @include pfe-no-print-background;

  // Tag element styles
  *, *::before, *::after {
    box-sizing: border-box;
  }
}

@each $color in (darker, darkest, accent, complement, lighter, lightest) {
  :host([pfe-color="#{$color}"]) {
    --pfe-band--BackgroundColor:                  #{pfe-color(surface--#{$color})};
    --pfe-broadcasted--color--text:               #{pfe-color(surface--#{$color}--text)};
    --pfe-broadcasted--color--ui-link:            #{pfe-color(surface--#{$color}--link)};
    --pfe-broadcasted--color--ui-link--visited:   #{pfe-color(surface--#{$color}--link--visited)};
    --pfe-broadcasted--color--ui-link--hover:     #{pfe-color(surface--#{$color}--link--hover)};
    --pfe-broadcasted--color--ui-link--focus:     #{pfe-color(surface--#{$color}--link--focus)};
  }
}

// thinner padding on top & bottom
:host([pfe-size="small"]) {
  --pfe-band--Padding:   calc(#{pfe-local(Padding--vertical)} / 4)  #{pfe-local(Padding--horizontal)};
}

.pfe-band {
  &__container {
    // Does not need to be wrapped in @supports because it updates variables
    --pfe-band_region--width: calc(calc(1fr - #{pfe-local(Width__aside--sm)}) - #{pfe-local(gutter--horizontal)});
    // --pfe-band--gridTemplateArea_mobile: "body";
    grid-template-areas: "body";
    // Styles for the different combination of regions
    &[pfe-has-aside] {
      grid-template-areas:
        "body" "aside";
      @media (min-width: #{pfe-breakpoint(md)}) {
        --pfe-band--layout: 1fr #{pfe-local(Width__aside--sm)};
      }
      @media (min-width: #{pfe-breakpoint(lg)}) {
        --pfe-band--layout: 1fr #{pfe-local(Width__aside--lg)};
      }
      &[pfe-aside-mobile="top"] {
        grid-template-areas:
          "aside" "body";
      }
      &[pfe-aside-desktop="left"] {
        @media (min-width: #{pfe-breakpoint(md)}) {
            grid-template-areas:
              "aside body";
          --pfe-band--layout: #{pfe-local(Width__aside--sm)} 1fr;
        }
        @media (min-width: #{pfe-breakpoint(lg)}) {
          --pfe-band--layout: #{pfe-local(Width__aside--lg)} 1fr;
        }
      }
    }
    &[pfe-has-header] {
      grid-template-areas:
        "header" "body";
      &[pfe-has-aside] {
        grid-template-areas:
          "header"
          "body" "aside";
          @media (min-width: #{pfe-breakpoint(md)}) {
            grid-template-areas:
              "header header"
              "body aside";
         }
      }
      &[pfe-aside-mobile="top"] {
        grid-template-areas:
          "aside"
          "header"
          "body";
      }
      &[pfe-aside-height="full"] {
          @media (min-width: #{pfe-breakpoint(md)}) {
            grid-template-areas:
              "header aside"
              "body aside";
          }
      }
      &[pfe-aside-desktop="left"] {
          @media (min-width: #{pfe-breakpoint(md)}) {
            grid-template-areas:
              "header header"
              "aside body";
          }
          &[pfe-aside-height="full"] {
              @media (min-width: #{pfe-breakpoint(md)}) {
                  grid-template-areas:
                  "aside header"
                  "aside body";
              }
            }
        }
    }
    &[pfe-has-footer] {
      grid-template-areas:
        "body"
        "footer";
      &[pfe-has-aside] {
        grid-template-areas:
          "body"
          "aside"
          "footer";
          @media (min-width: #{pfe-breakpoint(md)}) {
             grid-template-areas:
                "body aside"
                "footer footer";
          }
      }
      &[pfe-aside-mobile="top"] {
        grid-template-areas:
          "aside"
          "body"
          "footer";
      }
      &[pfe-aside-height="full"] {
         @media (min-width: #{pfe-breakpoint(md)}) {
            grid-template-areas:
               "body aside"
               "footer aside" ;
         }
      }
      &[pfe-aside-desktop="left"] {
          @media (min-width: #{pfe-breakpoint(md)}) {
             grid-template-areas:
             "aside body"
             "footer footer";
          }
          &[pfe-aside-height="full"] {
              @media (min-width: #{pfe-breakpoint(md)}) {
                 grid-template-areas:
                 "aside body"
                 "aside footer";
              }
          }
      }
    }
    &[pfe-has-header][pfe-has-footer] {
      grid-template-areas:
        "header"
        "body"
        "footer";
      &[pfe-has-aside] {
        grid-template-areas:
          "header"
          "body"
          "footer"
          "aside";
        @media (min-width: #{pfe-breakpoint(md)}) {
            grid-template-areas:
            "header header"
            "body aside"
            "footer footer";
        }
      }
      &[pfe-aside-mobile="top"] {
        grid-template-areas:
          "aside"
          "header"
          "body"
          "footer";
      }
      &[pfe-aside-height="full"] {
          @media (min-width: #{pfe-breakpoint(md)}) {
          grid-template-areas:
             "header aside"
             "body aside"
             "footer aside" ;
          }
      }
      &[pfe-aside-desktop="left"] {
         @media (min-width: #{pfe-breakpoint(md)}) {
             grid-template-areas:
               "header header"
               "aside body"
               "footer footer";
         }
         &[pfe-aside-height="full"] {
            @media (min-width: #{pfe-breakpoint(md)}) {
                grid-template-areas:
                "aside header"
                "aside body"
                "aside footer";
            }
         }
      }
    }

    position:  relative;
    margin:    0 auto;
    width: 100%;
    max-width: #{pfe-local(Width)};
    // @extend %flex-fallback;

    // Grid support styles
    @supports (display: grid) and ( not (display:-ms-grid) ) {
      // @extend %grid-layout;
      display: grid;
      grid-row-gap: #{pfe-local(gutter--vertical)};
      grid-column-gap: #{pfe-local(gutter--horizontal)};
      margin-bottom: 0;
      grid-template-columns: #{pfe-local(layout)};
      grid-template-rows:    max-content;
    }
}
  // For each section in the band layout
  @each $section in (header, body, aside, footer) {
       border: 3px solid red;
       @extend %flex-fallback; // Add the flex fallback styles
       //Edge isn't reading into this because it's in the shadow dom
    &__#{$section} { // i.e., pfe-band__header
         border: 10px solid green;
      margin-bottom: #{pfe-local(gutter--vertical)};
      // Apply the standard grid
      @supports (display: grid) {
          // @extend %grid-layout;
          display: grid;
          grid-row-gap: #{pfe-local(gutter--vertical)};
          grid-column-gap: #{pfe-local(gutter--horizontal)};
          margin-bottom: 0;
          // Apply the section as a named grid-area
          grid-area: #{$section};
          // Allow users to hook into the layout with custom columns
          grid-template-columns: var(--pfe-band__#{$section}--layout);
      }
    }
  }

  &__aside {
    align-self: stretch;
  }
}

